--- a/InternetShop.API/InternetShop.API.csproj
+++ b/InternetShop.API/InternetShop.API.csproj
@@ -9,12 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\InternetShop.Application\InternetShop.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
