--- a/InternetShop.Infrastructure/InternetShop.Infrastructure.csproj
+++ b/InternetShop.Infrastructure/InternetShop.Infrastructure.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InternetShop.Application\InternetShop.UseCases.csproj" />
+    <ProjectReference Include="..\InternetShop.Domain\InternetShop.Domain.csproj" />
   </ItemGroup>
 
 </Project>
