--- a/InternetShop.API/InternetShop.API.csproj
+++ b/InternetShop.API/InternetShop.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>67eddadd-c4a0-4457-a362-53ca2ff20939</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\InternetShop.Application\InternetShop.UseCases.csproj" />
+    <ProjectReference Include="..\InternetShop.Infrastructure\InternetShop.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
